2015-06-24  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.52.0 release.

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/styleeditor/dialog-style-editor.ui:
	Fix bug #23470 : Style editor does not permit margins to go over 100 and other problems. (Patch by Tomáš Hnyk)

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Fix bug #23660 : Keyboard shortcuts window is to small by default. (Patch by Tomáš Hnyk)

2015-06-21  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/Makefile.am:
	* plugins/actions/wavefrommanagement/Makefile.am:
	* plugins/actions/wavefrommanagement/mediadecoder.h:
	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.se-plugin.in:
	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations.

2015-06-21  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations

2015-06-07  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #23588 : Name Subtitle Editor project files something else but name.xml.

2015-06-07  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/Makefile.am:
	* plugins/actions/stylize/Makefile.am:
	* plugins/actions/stylize/stylize.cc:
	* plugins/actions/stylize/stylize.se-plugin.in:
	Fix bug #23529 : Impossible to change styles of several subtitles at once.

2015-06-07  kitone  <kitone@gna.org>

	* src/document.h:
	* src/style.cc:
	* src/styles.cc:
	Emit signals on style edition.

2015-06-06  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Remove deprecated widget.

2015-06-06  kitone  <kitone@gna.org>
