@@ -1,3 +1,8 @@
+2015-06-25  kitone  <kitone@gna.org>
+
+	* plugins/actions/errorchecking/Makefile.am:
+	Fix bug #23662 : Subtitleeditor 0.52.0 "errorcheckingplugin.cc:32:36: fatal error: mincharacterspersecond.h: No such file or directory".
+
 2015-06-24  kitone  <kitone@gna.org>
 
 	* NEWS:
